nohup.out
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
Error: That port is already in use.
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
Invalid HTTP_HOST header: '54.83.87.174:8001'. You may need to add '54.83.87.174' to ALLOWED_HOSTS.
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/utils/deprecation.py", line 133, in __call__
    response = self.process_request(request)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/middleware/common.py", line 48, in process_request
    host = request.get_host()
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/http/request.py", line 151, in get_host
    raise DisallowedHost(msg)
django.core.exceptions.DisallowedHost: Invalid HTTP_HOST header: '54.83.87.174:8001'. You may need to add '54.83.87.174' to ALLOWED_HOSTS.
Bad Request: /
[12/Apr/2024 14:03:15] "GET / HTTP/1.1" 400 63580
Invalid HTTP_HOST header: '54.83.87.174:8001'. You may need to add '54.83.87.174' to ALLOWED_HOSTS.
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/utils/deprecation.py", line 133, in __call__
    response = self.process_request(request)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/middleware/common.py", line 48, in process_request
    host = request.get_host()
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/http/request.py", line 151, in get_host
    raise DisallowedHost(msg)
django.core.exceptions.DisallowedHost: Invalid HTTP_HOST header: '54.83.87.174:8001'. You may need to add '54.83.87.174' to ALLOWED_HOSTS.
Bad Request: /favicon.ico
[12/Apr/2024 14:03:16] "GET /favicon.ico HTTP/1.1" 400 63551
/home/ubuntu/django-todo/todoApp/settings.py changed, reloading.
Performing system checks...

April 12, 2024 - 14:03:05
Django version 5.0.4, using settings 'todoApp.settings'
Starting development server at http://0.0.0.0:8001/
Quit the server with CONTROL-C.

Traceback (most recent call last):
  File "/home/ubuntu/django-todo/manage.py", line 21, in <module>
    main()
  File "/home/ubuntu/django-todo/manage.py", line 17, in main
    execute_from_command_line(sys.argv)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/core/management/__init__.py", line 382, in execute
    settings.INSTALLED_APPS
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/conf/__init__.py", line 89, in __getattr__
    self._setup(name)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/conf/__init__.py", line 76, in _setup
    self._wrapped = Settings(settings_module)
  File "/home/ubuntu/.local/lib/python3.10/site-packages/django/conf/__init__.py", line 190, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "/usr/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/ubuntu/django-todo/todoApp/settings.py", line 28
    ALLOWED_HOSTS = [*]
                      ^
SyntaxError: invalid syntax
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
[12/Apr/2024 14:07:49] "GET / HTTP/1.1" 302 0
[12/Apr/2024 14:07:50] "GET /todos HTTP/1.1" 301 0
[12/Apr/2024 14:07:50] "GET /todos/ HTTP/1.1" 200 3515
[12/Apr/2024 14:07:51] "GET /static/css/style.css HTTP/1.1" 200 225
Not Found: /favicon.ico
[12/Apr/2024 14:07:52] "GET /favicon.ico HTTP/1.1" 404 2573
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
[12/Apr/2024 14:33:01] "GET / HTTP/1.1" 302 0
[12/Apr/2024 14:33:01] "GET /todos HTTP/1.1" 301 0
[12/Apr/2024 14:33:02] "GET /todos/ HTTP/1.1" 200 3515
[12/Apr/2024 14:33:02] "GET /static/css/style.css HTTP/1.1" 304 0
[12/Apr/2024 14:33:13] "POST /todos/add/ HTTP/1.1" 302 0
[12/Apr/2024 14:33:13] "GET /todos/ HTTP/1.1" 200 4095
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
[12/Apr/2024 15:29:56] "GET /todos/ HTTP/1.1" 200 4095
[12/Apr/2024 15:29:56] "GET /static/css/style.css HTTP/1.1" 304 0
[12/Apr/2024 15:56:16] "GET /todos/ HTTP/1.1" 200 4095
[12/Apr/2024 15:56:17] "GET /static/css/style.css HTTP/1.1" 304 0
[12/Apr/2024 17:27:40] "GET /todos/ HTTP/1.1" 200 4095
[12/Apr/2024 17:27:43] "GET /static/css/style.css HTTP/1.1" 304 0
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
Performing system checks...

April 16, 2024 - 10:57:22
Django version 5.0.4, using settings 'todoApp.settings'
Starting development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.

Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
todos.Todo: (models.W042) Auto-created primary key used when not defining a primary key type, by default 'django.db.models.AutoField'.
	HINT: Configure the DEFAULT_AUTO_FIELD setting or the TodosConfig.default_auto_field attribute to point to a subclass of AutoField, e.g. 'django.db.models.BigAutoField'.

System check identified 1 issue (0 silenced).
Watching for file changes with StatReloader
[27/Jun/2024 10:40:22] code 400, message Bad request syntax ('ÿôÿý\x06ÿôÿý\x06ÿôÿý\x06ÿôÿý\x06ÿôÿý\x06ÿôÿý\x06ÿôÿý\x06ÿôÿý\x06')
[27/Jun/2024 10:40:22] "ÿôÿýÿôÿýÿôÿýÿôÿýÿôÿýÿôÿýÿôÿýÿôÿý" 400 -
[27/Jun/2024 10:40:22] "GET / HTTP/1.1" 302 0
[27/Jun/2024 10:40:22] "GET /todos HTTP/1.1" 301 0
[27/Jun/2024 10:40:23] "GET /todos/ HTTP/1.1" 200 4095
[27/Jun/2024 10:40:23] "GET /static/css/style.css HTTP/1.1" 200 225
Not Found: /favicon.ico
[27/Jun/2024 10:40:24] "GET /favicon.ico HTTP/1.1" 404 2437
